gccida/g1/cselib_process_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:1814:16: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse( hash_table_0, cselib_invalidate_mem_1, callmem); 
               ^~~~~~~~~~~~
               hash_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:1820:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( j = ( __int64)insn[4]; j; j = *( _QWORD *)( j + 16) ) 
                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:1833:16: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse( hash_table_0, discard_useless_locs, 0LL); 
               ^~~~~~~~~~~~
               hash_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:1836:16: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse( hash_table_0, discard_useless_values, 0LL); 
               ^~~~~~~~~~~~
               hash_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/cselib.c:1838:30: error: expected expression
fancy_abort( ( const char *)&::insn, 394, "remove_useless_values"); 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_process_insn/src/obj/cselib.o] Error 1
